fixed lesson card spacing, exclamation point period also adjusted number of cards that can be seen at one time from 9 to 6, all on the hm pg

--- a/app/assets/stylesheets/style_guide.css.scss
+++ b/app/assets/stylesheets/style_guide.css.scss
@@ -618,13 +618,13 @@ HOMEPAGE LESSON PREVIEWS
 .lesson-preview-container {
   margin: 6em auto 6em;
   width: 45%;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  // border: 1px solid white;
+  // border-radius: 5px;
 }
 
 .lesson-preview-title-container {
-  margin-bottom: 0.5em;
-  background: #eee;
+  margin-bottom: 2.5em;
+  background: #fcfffe;
   box-shadow: 0 2px 5px rgba(0,0,0,0.18);
   padding: .7em .7em .7em .9em;
 
@@ -662,6 +662,9 @@ HOMEPAGE LESSON PREVIEWS
 
 .lesson-preview-description-container {
   padding: 1em;
+  margin-bottom: 2em;
+  background-color: #fcfffe;
+  border: 1px solid #eee;
 }
 
 .lesson-preview-subject-list, .lesson-preview-pipe, .lesson-preview-grade-list,  {
@@ -707,10 +710,10 @@ HOMEPAGE LESSON PREVIEWS
   line-height: 1.4em;
 }
 
-// .lesson-preview-container {
-//   margin-bottom: 3em;
-//   margin-top: 3em;
-// }
+
+
+
+
 /************************************
             SAVE BUTTON
 ************************************/
